Fix environment name when too long

--- a/src/modules/_required/fixes.css
+++ b/src/modules/_required/fixes.css
@@ -55,14 +55,14 @@
 .mh-location-pinnacle_chamber .mousehuntHud-environmentName,
 .mh-location-great_gnarled_tree .mousehuntHud-environmentName,
 .mh-location-rift_bristle_woods .mousehuntHud-environmentName {
-  position: absolute;
-  bottom: -5px;
-  left: 45px;
-  padding: 2px 13px 2px 0;
-  overflow: visible;
-  background: linear-gradient(1deg,#d8c8a0 1%,#ddcfaa 61%,#efe3ce);
-  border-top-right-radius: 25px;
-  box-shadow: 1px -3px 2px -1px #f6f2da;
+    position: absolute;
+    top: -5px;
+    left: 55px;
+    padding: 4px 13px 3px 0;
+    overflow: visible;
+    background: linear-gradient(1deg,#d8c8a0 1%,#ddcfaa 61%,#efe3ce);
+    border-top-right-radius: 75px;
+    margin-top: 32px;
 }
 
 /* Full width for the map link text box */
