--- a/src/modules/better-ui/styles.css
+++ b/src/modules/better-ui/styles.css
@@ -246,7 +246,6 @@ a.trapImageView-zoomButton {
 .mousehuntHud-environmentIconWrapper {
   width: 50px;
   height: 0;
-  border: 1px solid #8a6d3e;
 }
 
 /* mousepage styles */
